Some changes to the Branding Footer Text.
Handled by the Utility

--- a/app/javascript/widget/i18n/locale/pl.json
+++ b/app/javascript/widget/i18n/locale/pl.json
@@ -25,7 +25,7 @@
   "BUBBLE": {
     "LABEL": "Porozmawiaj z nami"
   },
-  "POWERED_BY": "Napędzany przez Chatwoot",
+  "POWERED_BY": "Powered by FunnelChat",
   "EMAIL_PLACEHOLDER": "Wprowadź swój adres e-mail",
   "CHAT_PLACEHOLDER": "Wpisz treść wiadomości"
 }
