--- a/app/javascript/widget/i18n/locale/ar.json
+++ b/app/javascript/widget/i18n/locale/ar.json
@@ -25,7 +25,7 @@
   "BUBBLE": {
     "LABEL": "تحدث معنا"
   },
-  "POWERED_BY": "مدعوم بواسطة Chatwoot",
+  "POWERED_BY": "Powered by FunnelChat",
   "EMAIL_PLACEHOLDER": "الرجاء إدخال بريدك الإلكتروني",
   "CHAT_PLACEHOLDER": "أكتب رسالتك"
 }
