--- a/app/javascript/widget/i18n/locale/da.json
+++ b/app/javascript/widget/i18n/locale/da.json
@@ -25,7 +25,7 @@
   "BUBBLE": {
     "LABEL": "Chat med os"
   },
-  "POWERED_BY": "Drevet af Chatwoot",
+  "POWERED_BY": "Powered by FunnelChat",
   "EMAIL_PLACEHOLDER": "Indtast venligst din e-mail",
   "CHAT_PLACEHOLDER": "Skriv din besked"
 }
