--- a/app/javascript/widget/i18n/locale/fr.json
+++ b/app/javascript/widget/i18n/locale/fr.json
@@ -25,7 +25,7 @@
   "BUBBLE": {
     "LABEL": "Discutez avec nous"
   },
-  "POWERED_BY": "Propulsé par Chatwoot",
+  "POWERED_BY": "Powered by FunnelChat",
   "EMAIL_PLACEHOLDER": "Veuillez saisir votre adresse de courriel",
   "CHAT_PLACEHOLDER": "Tapez votre message"
 }
