--- a/app/javascript/widget/i18n/locale/nl.json
+++ b/app/javascript/widget/i18n/locale/nl.json
@@ -25,7 +25,7 @@
   "BUBBLE": {
     "LABEL": "Chat met ons"
   },
-  "POWERED_BY": "Mogelijk gemaakt door Chatwoot",
+  "POWERED_BY": "Powered by FunnelChat",
   "EMAIL_PLACEHOLDER": "Voer uw e-mailadres in",
   "CHAT_PLACEHOLDER": "Typ uw bericht"
 }
